--- a/Learn to Unlearn and Unleash your.html
+++ b/Learn to Unlearn and Unleash your.html
@@ -23,6 +23,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -58,6 +59,7 @@
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <a href="https://wa.me/919643448705" class="whatsapp_float" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
@@ -71,6 +73,7 @@
                                 <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your
 
 Potential</a>
+
                                 <a href="COVID-19 and Mental Health.html" class="dropdown-item">COVID-19 and Mental Health</a>
                                 <a href="Mental Health.html" class="dropdown-item">Basics of Mental Health</a>
                                 <!-- <a href="Adjusting to the new normal.html" class="dropdown-item">Blog Detail</a> -->
