--- a/COVID-19 and Mental Health.html
+++ b/COVID-19 and Mental Health.html
@@ -67,7 +67,7 @@
                         <a href="about.html" class="nav-item nav-link ">Get to know me</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Blog</a>
                             <div class="dropdown-menu">
                                 <a href="Adjusting to the new normal.html" class="dropdown-item">Adjusting to the new normal</a>
                                 <a href="Learn to Unlearn and Unleash your.html" class="dropdown-item">Learn to Unlearn and Unleash your
@@ -80,7 +80,7 @@ Potential</a>
                             </div>
                         </div>
                         <a href="Resources.html" class="nav-item nav-link">Resources</a>
-                        <a href="Appaintment form.html" class="nav-item nav-link">Appointment</a>
+                        <a href="Appointment form.html" class="nav-item nav-link">Appointment</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
