--- a/COVID-19 and Mental Health.html
+++ b/COVID-19 and Mental Health.html
@@ -392,7 +392,7 @@ help you on your journey of healing and self-discovery.
                                     <input type="submit" value="Post Comment" class="btn">
                                 </div>
                             </form> -->
-                            <a class="btn" href="Appaintment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
+                            <a class="btn" href="appointment form.html">Get An Appointment <i class="fa fa-angle-right"></i></a></p>
                                 </div>
                         </div>
                     </div>
