--- a/COVID-19 and Mental Health.html
+++ b/COVID-19 and Mental Health.html
@@ -38,11 +38,10 @@
                                 <h2>Phoenixforcounselling@gmail.com</h2>
                             </div>
                             <div class="text">
-                                <i class="fa fa-phone-alt"></i>
+                                <!-- <i class="fa fa-phone-alt"></i> -->
                                 <h2>
-                                +91 96434 48705
+                                    UDYAM REGISTRATION NUMBER: UDYAM-MH-27-0041103
                                 </h2>
-                                <p>For Appointment</p>
                             </div>
                         </div>
                     </div>
