Update COVID-19 and Mental Health.html

--- a/COVID-19 and Mental Health.html
+++ b/COVID-19 and Mental Health.html
@@ -765,10 +765,10 @@ Potential</a>
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="http://www.timekeepers-tech.tk/">TimeKeepers.tech</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="https://t-r-i-n-i-t-y.tk/">Trinithy</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
-                            <p>Designed By <a href="http://www.timekeepers-tech.tk/">Timekeepers.tech</a></p>
+                            <p>Designed By <a href="https://t-r-i-n-i-t-y.tk/">Trinity</a></p>
                         </div>
                     </div>
                 </div>
